@@ -5,7 +5,8 @@ Changelog
 1.4.0b7 (unreleased)
 ====================
 
-- Nothing changed yet.
+- `batou.lib.mysql.User` and `batou.lib.mysql.Grant` use `hostname` for the
+  MySQL *server* and `allow_from_hostname` for granting the client access from.
 
 
 1.4.0b6 (2016-12-14)
